@@ -1,3 +1,9 @@
+2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>
+
+	[ftsdf] New demo program to view SDF glyphs.
+
+	* src/ftsdf.c: New file, with first templates.
+
 2020-12-01  Priyesh Kumar  <priyeshkkumar@gmail.com>
 
 	Synchronize with recent FreeType changes.
